--- a/docs/styles.css
+++ b/docs/styles.css
@@ -32,16 +32,16 @@ body {
 }
 .content .companies {
   display: flex;
-  flex-direction: row;
-  gap: 89px;
+  gap: 20px;
   margin-top: 40px;
   width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .companies img {
   width: 90%;
 }
 .content .companies > div {
-  flex: 1 1 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,6 +50,12 @@ body {
   background: #fff;
   box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.35);
   padding: 40px;
+}
+@media (min-width: 768px) {
+    .col-md-6 {
+        flex: 0 0 auto;
+        width: 49%;
+    }
 }
 .content .companies > div p {
   color: #333;
@@ -83,6 +89,9 @@ body {
 }
 .button-red {
   background: #cf152d;
+}
+.button-purple {
+  background: #7255a4;
 }
 footer {
   width: 100%;
@@ -186,7 +195,6 @@ footer a {
   }
   .content .companies > div {
     flex: 1 1 330px;
-    margin: 0 10px;
   }
   .content .companies > div p {
     font-size: 16px;
